# youtubers_daily_update

./: .gitignore  README.md  channels.example.yml  channels.yml  pyproject.toml  requirements.txt
.github/workflows/: daily-update.yml  schedule-smoke.yml
docs/: user-stories.md
src/youtube_daily_update/: __init__.py  cli.py  config.py  logging_utils.py  messages.py  models.py  runner.py  state.py  time_window.py
src/youtube_daily_update/providers/: base.py  fake.py  gemini.py  telegram.py  transcript_ytdlp.py  youtube.py
state/: seen_videos.sqlite
tests/: test_config.py  test_gemini.py  test_messages.py  test_runner.py  test_state.py  test_time_window.py  test_workflow_static.py
