[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-daily-update"
version = "0.1.0"
description = "Daily YouTube channel updates summarized in Simplified Chinese and sent to Telegram."
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "yt-dlp>=2024.1.1",
]

[project.scripts]
youtube-daily-update = "youtube_daily_update.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
